k8s/istio-mutual-tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring-kotlin-microservice
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-spring-kotlin-microservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: sample-spring-kotlin-microservice
    spec:
      containers:
      - image: piomin/sample-spring-kotlin
        name: sample-spring-kotlin-microservice
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sample-spring-kotlin-microservice
  name: sample-spring-kotlin-microservice
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app.kubernetes.io/name: sample-spring-kotlin-microservice
  type: ClusterIP
